--- a/TweetLocations/en.lproj/MainStoryboard_iPad.storyboard
+++ b/TweetLocations/en.lproj/MainStoryboard_iPad.storyboard
@@ -59,11 +59,6 @@
                                         <rect key="frame" x="0.0" y="0.0" width="703" height="373"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     </imageView>
-                                    <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" id="Vx9-PD-x7d">
-                                        <rect key="frame" x="333" y="168" width="37" height="37"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <color key="color" red="0.99607849120000003" green="0.0" blue="0.21568629149999999" alpha="1" colorSpace="deviceRGB"/>
-                                    </activityIndicatorView>
                                 </subviews>
                                 <connections>
                                     <outlet property="delegate" destination="4" id="HUE-sB-lR0"/>
@@ -85,8 +80,8 @@
                                     <action selector="doSave:" destination="4" eventType="touchUpInside" id="A3R-MP-atG"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="bottomLeft" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="9" id="Et5-xA-bXz">
-                                <rect key="frame" x="20" y="0.0" width="663" height="155"/>
+                            <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="bottomLeft" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumFontSize="9" id="Et5-xA-bXz">
+                                <rect key="frame" x="10" y="218" width="680" height="155"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.98823535439999999" green="0.85098046059999999" blue="1" alpha="1" colorSpace="deviceRGB"/>
                                 <string key="text">tweet
@@ -98,6 +93,11 @@ TWEET
                                 <color key="shadowColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <size key="shadowOffset" width="2" height="2"/>
                             </label>
+                            <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" id="Vx9-PD-x7d">
+                                <rect key="frame" x="333" y="334" width="37" height="37"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <color key="color" red="0.99607849120000003" green="0.0" blue="0.21568629149999999" alpha="1" colorSpace="deviceRGB"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
