upsized the transparent info text item (STATUS) Changed the detail big text view to be [user]: text fixed the task increment for googleOperations made the googleOperations work on subscription arrays     and only queue the tweetgrabber after all subscriptions     have sorted the queue of tweetgrabbers gave up the idea of dropping images during backgrounder in AppDelegate     also made it await the completion of all tasks Trying to fix the setRead in the GoogleOperations Now I have googleID and streamID in the DB found out I was only grabbing 20 from each stream -- now 2000 Made the status item in the master view float above the items

--- a/TweetLocations/en.lproj/iPad.storyboard
+++ b/TweetLocations/en.lproj/iPad.storyboard
@@ -147,7 +147,7 @@ TWEET
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="STATUS" id="L06-iY-hjE">
                                 <rect key="frame" x="300" y="0.0" width="400" height="350"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.08235294371843338" green="0.30588236451148987" blue="0.34509804844856262" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
