--- a/TweetLocations/en.lproj/iPhone.storyboard
+++ b/TweetLocations/en.lproj/iPhone.storyboard
@@ -227,7 +227,7 @@ TWEET
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.5" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="STATUS" id="P5K-2q-cCJ">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="208"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" red="0.082352943720000002" green="0.3058823645" blue="0.34509804840000002" alpha="1" colorSpace="deviceRGB"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
