ios7 - having to move some things around trying to stop the selection in the edit-text, but keep the long-press action - done trying to help out the sorting mechanism and simplify it got the vine links, can see still frame, handling the video Also added the username as default for filename in save video Made the video preview a whole other webview controller, seems to work

--- a/TweetLocations/en.lproj/iPad.storyboard
+++ b/TweetLocations/en.lproj/iPad.storyboard
@@ -32,7 +32,7 @@
                         <rect key="frame" x="0.0" y="64" width="703" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1" verticalCompressionResistancePriority="1" showsHorizontalScrollIndicator="NO" minimumZoomScale="0.10000000000000001" maximumZoomScale="5" editable="NO" id="gQY-2V-62v">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="1" verticalCompressionResistancePriority="1" showsHorizontalScrollIndicator="NO" minimumZoomScale="0.10000000000000001" maximumZoomScale="5" editable="NO" selectable="NO" id="gQY-2V-62v">
                                 <rect key="frame" x="0.0" y="0.0" width="703" height="440"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
